# hopping-eggplant

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  gk  package.xml  pendulum_fly.py  pot_align.py  pot_calibrate.py  requirements.txt
arduino/MPU6050_DMP6_test/: MPU6050_6Axis_MotionApps612.cpp  MPU6050_DMP6_test.ino
config/: energy_plot.xml  joints.yaml  plot.xml
firmware/ctrl/: ctrl.ino
full_description/: CMakeLists.txt  package.xml
full_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
full_description/meshes/: 95495K673_POLYURETHANE_RUBBER_ADHESIVE-BACK_BUMPER_v1_1.stl  9657K449_COMPRESSION_SPRING_v1_1.stl  Leg_0_v1_1.stl  Savox_SV1270TG_v4_1.stl  Turnigy_Aerodrive_SK3_-_2836_v1_1.stl  _bldc_parts.d32996c5-cb5d-48d1-b36d-40a50d399b36_v5_1.stl  base_link.stl  battery_v1_1.stl  battery_v2_1.stl  flywheel_v2_1.stl  middle_v13_1.stl  middle_v7_1.stl  middle_v8_1.stl  middle_v9_1.stl
full_description/urdf/: full.gazebo  full.trans  full.xacro  materials.xacro
hardware/arduino/MPU6050_DMP6_test/: MPU6050.cpp  MPU6050_6Axis_MotionApps20.h  MPU6050_DMP6_test.ino
hardware/data/: pot_align.csv
hardware/firmware/ctrl/: ctrl.ino
hardware/proc/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  control-sim.2.py  control-sim.ipynb  control-sim.py
include/: consts.hpp  util.hpp
launch/: gazebo.launch  respawn.launch  spawn_model.launch
misc/: debug_ccus_ccpc.md
pendulum/: CMakeLists.txt  package.xml
pendulum/config/: joints.yaml  plot.xml
pendulum/include/: consts.hpp
pendulum/launch/: empty_world.launch  gazebo.launch  plots.launch  robot.launch  sim.launch
pendulum/src/: base_contact.cpp  imu.cpp  jump_control.cpp  orientation_control.cpp  spring_emulator.cpp  yaw_controll.cpp  yaw_controll.h
pendulum/urdf/: arm.xacro  flywheel.xacro  imu.xacro  pendulum.xacro
pendulum/worlds/: pendulum.world
proc/: Untitled3.ipynb  control-sim.2.py  control-sim.ipynb  control-sim.py  servo_piston_linear_analysis.ipynb
proc/turnigy_char/: Untitled1.ipynb
scripts/: arduino_listener.py
speedcal/: cal.py
src/: base_contact.cpp  grid_search_test.py  main.cpp  prism_ctrl.cpp  spring_emulator.cpp  util.cpp
stwork/g431_test/: .cproject  .mxproject  B-G431B-ESC1.xml  g431_test.ioc
urdf/: arm.xacro  flywheel.xacro  imu.xacro  pendulum.xacro  tracker.xacro
urdf/pendulum_test/: model.config  model.sdf
worlds/: pendulum.world
(+83 files in other folders)
